<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/jungleBackground_splashScreen"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/jungleBackgroundDescription"
        android:scaleType="centerCrop"
        android:transitionName="@string/jungleImageViewTransition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:srcCompat="@drawable/jungle_background" />

    <ImageView
        android:id="@+id/cityBackground_splashScreen"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/cityBackgroundDescription"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:srcCompat="@drawable/city_background" />

    <ImageView
        android:id="@+id/carAnimalsImageView_splashScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/animalsCarDescription"
        android:transitionName="@string/animalsCarImageViewTransition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/animals_safari_car" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/appTitleBoard_splashScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/woodenBoardDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat='@drawable/wood_board' />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/safari_silhoutte_font"
                android:text="@string/app_name"
                android:textColor="#013c28"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>